  * Bumped library minor version in lintian-overrides
  * Placed shared libraries in Section: libs
  * Manually create icon directories in rules (for Raspbian Jessie)
  * Ship svxreflector in new binary package
  * Ship GPIO auxiliaries in separate, architecture independent package
  * Changed package descriptions in control
  * Switched to systemd scripts provided by upstream

 -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 15:00:40 -0800

svxlink (15.11-2.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Add upstream patch to fix FTBFS with gcc 7. (Closes: #853672)

 -- Adrian Bunk <bunk@debian.org>  Fri, 01 Sep 2017 16:15:22 +0300

svxlink (15.11-2) unstable; urgency=medium

  * Bugfix release
  * Referred to $(CURDIR) in rules (Closes: #846703)
  * Build-Depends: debhelper (>= 10); bumped compat to 10
  * Dropped Build-Depends: quilt
  * Switched to new style dbgsym packages
  * Updated Standards-Version: to 3.9.8
  * svxlink-server & remotetrx Depend:lsb-base (>= 3.0-6) b/c init scripts
  * Shipping systemd service files (untested)
  * Shipping new qtel icons; used them in qtel.desktop (LP: #1591112)
  * Library packages are Multi-Arch:same
  * Fixed more spelling errors
  * Enabled hardening

 -- Felix Lechner <felix.lechner@gmail.com>  Fri, 09 Dec 2016 16:45:49 -0800

svxlink (15.11-1) unstable; urgency=medium

  [ Felix Lechner ]
  * New upstream release
  * Changed install locations to multiarch
  * Increased SONAMES to 1.4 for asyncaudio, asynccpp, asyncqt and asynccore

  [ Colin Tuckley ]
  * Bump Standards version to 3.9.7 (No changes required).

 -- Felix Lechner <felix.lechner@gmail.com>  Wed, 06 Apr 2016 09:26:50 +0100

svxlink (14.08.1-2) unstable; urgency=medium

  * Support ISO C++ 2011 standard (Closes: #801265)

 -- Felix Lechner <felix.lechner@gmail.com>  Mon, 02 Nov 2015 11:52:39 -0800

svxlink (14.08.1-1) unstable; urgency=medium

  * New upstream version