@@ -15,8 +15,9 @@ svxlink (15.11+20171204~github.bdf70af5-1) UNRELEASED; urgency=medium
   * Ship GPIO auxiliaries in separate, architecture independent package
   * Changed package descriptions in control
   * Switched to systemd scripts provided by upstream
+  * Enabled systemd integration in rules
 
- -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 15:00:40 -0800
+ -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 15:17:16 -0800
 
 svxlink (15.11-2.1) unstable; urgency=medium
 
